k3s/blog/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: blog
  namespace: default
  labels:
    app: blog
spec:
  replicas: 3
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: blog
  template:
    metadata:
      labels:
        app: blog
    spec:
      containers:
      - name: blog
        image: ghcr.io/kdpuvvadi/blog:d32619c
        resources:
          limits:
            memory: 256Mi
            cpu: "0.5"
          requests:
            memory: 128Mi
            cpu: "0.2"
