k3s/blog/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: blog
  namespace: default
spec:
  selector:
    app: blog
  ports:
  - name: http
    targetPort: 4000
    port: 4000
