k3s/blog/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: blog
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`blog.host.puvvadi.net`)
      kind: Rule
      services:
        - name: blog
          port: 4000
      middlewares:
        - name: default-headers
  tls:
    secretName: host-puvvadi-net-tls
